--- a/style.css
+++ b/style.css
@@ -1,27 +1,110 @@
+@font-face {
+    font-family: pokemon;
+    src: url("fonts/PocketMonk-15ze.ttf");
+}
+
+@font-face {
+    font-family: gameboy;
+    src: url("fonts/PokemonGb-RAeo.ttf");
+}
+
+
 body{
+    --pokemon-yellow: #ffcc2b;
+    --pokemon-blue: #3D75BC;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image: url("images/grass(cropped).png");
+    background-repeat: repeat;
+    background-size: 20%;
+    background-clip: border-box;
+    border: none;
+    font-family: gameboy;
+    text-align: center;
+    height: 100vh;
+    width: auto;
 }
 
-/* #fire,#water,#grass{
-    border: none;
-} */
+h1{
+    font-family: pokemon;
+    font-size: 5em;
+    margin-bottom: 15px;
+    color: var(--pokemon-yellow);
+    -webkit-text-stroke: 3px var(--pokemon-blue);
+}
+
+img {
+    width:  10vw;
+    height: 10vw;
+    object-fit: cover;
+}
+
+.playArea{
+    background-color: beige;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+.hidden{
+    display: none;
+}
 
 .pokemon{
     border: none;
     background-color: inherit;
 }
 
+#fire{
+    mix-blend-mode: multiply;
+}
+
 #fire:hover{
-    border: solid red 
+    border: solid red 2px;
+    border-radius: 10px;
+    box-sizing: border-box;
 }
 
 #water:hover{
-    border: solid blue;
+    border: solid blue 2px;
+    border-radius: 10px;
+    box-sizing: border-box;
+}
+
+#grass{
+    mix-blend-mode: multiply;
 }
 
 #grass:hover{
-    border: solid green;
+    border: solid green 2px;
+    border-radius: 10px;
+    box-sizing: border-box;
+}
+
+#reset{
+    display: flex;
+    align-items: center;
+    border: none;
+    background-color: var(--pokemon-blue);
+    font-family: gameboy;
+    border-radius: 5px;
+}
+
+#reset img{
+    height: 50px;
+    width: auto;
+}
+
+#reset:hover{
+    background-color: #1d58a5;
+}
+
+#pokeball_Static{
+    position: absolute;
+    background-color: var(--pokemon-blue);
 }
